Changed the dates a bit

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>My Parse App</title>
-  <meta name="description" content="My Parse App">
+  <title>Danny Counter</title>
+  <meta name="description" content="Danny Counter">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
@@ -14,7 +14,7 @@
 <body>
   
   <div id="main">
-      <h1>Danny McClanahan Question Counter</h1>
+      <h2>Danny McClanahan Question Counter</h2>
       <p>Danny has asked <span id="count"></span> questions since Monday, September 7th. </p>
       <p>The last question was asked on <span id="date"></span></p>
       <button id="increment_button">Danny Asked A Question</button>
