Adding error message

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
           },
           error: function(error) {
             console.log("Set error: " + error.message);
+            alert("Somebody just pressed the button. Refresh to view.");
           }
         });
     });
